--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora</title>
+    <title>Operciones matemáticas</title>
 </head>
 
 <body>
     <h1>Bienvenidos de mi calculadora</h1>
+    <p>Estas son las operaciones disponibles</p>
 </body>
 
 </html>
