--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Bienvenidos de mi calculadora</h1>
-    <p>Estas son las operaciones disponibles</p>
+    <p>Estas son las operaciones disponibles:</p>
 </body>
 
 </html>
