Se agregó una lista de opaciones a elegir

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <h1>Bienvenidos de mi calculadora</h1>
     <p>Estas son las operaciones disponibles:</p>
+    <ul>
+        <li>Suma</li>
+        <li>Resta</li>
+        <li>Multiplicación</li>
+    </ul>
 </body>
 
 </html>
